<resources>
    <string name="app_name">Blood Glucose Level Monitor</string>
    <string name="fasting">Fasting:</string>
    <string name="breakfast">Breakfast:</string>
    <string name="lunch">Lunch:</string>
    <string name="dinner">Dinner:</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="num_only">Number only!</string>
</resources>